updated about me

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 
     <main>
         <article>
-        <div class="contents">
-            <div id="about-me" class="content">
+            <div id="about-me" class="about-me-content">
+                <div class="about-me-grid-content">
+                    <div class="about-me-title">
                 <p> About Me </p>
             </div>
-            <div class ="about-me-item p1">
+            <div class ="about-me-item">
                 <p>I am currently a student at UNC Chapel Hill BootCamp. I am taking this course with the mindset of opening new doors or opportunity to expand my future career choices.  At the end of this program I am hoping to better understand the ins-and-outs of front end and back end of coding and web development.</p>
+            </div>
+            </div>
             </div>
         </article>
             
