--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
 
     <main>
-        <article>
-            <div id="about-me" class="about-me-content">
+        <section class="contents">
+        <article id="about-me" class="content">
                 <div class="about-me-grid-content">
                     <div class="about-me-title">
                 <p> About Me </p>
@@ -47,6 +47,31 @@
             </div>
         </article>
             
+        <article id="work-tab" class="content">
+            <div class="work-tab-grid-content">
+                <div class="work-tab-title">
+                <p> Work </p>
+                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <div class="horiseon-img">
+                            <a href="https://amdworkspace.github.io/horiseon-code-refactor-challenge/">
+                            <img src="./Assets/horiseon-screenshot.jpg">
+                            </a>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="https://amdworkspace.github.io/run-buddy/">
+                            <img src="./Assets/run-buddy-screenshot.jpg">
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            </div>
+        </article>
+        </section>
     </main>
 
     <footer>
