--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="hero-subtitle">
         <span class="span-background opacity">Happy Coding!</span>
         <img src="./Assets/photo-of-me.jpeg">
+        <h2>Alan M Do</h2>
     </div>
     </section>
 
